--- a/front/static/style/style.css
+++ b/front/static/style/style.css
@@ -9,16 +9,21 @@
 
 h1
 {
-    font-size: xxx-large;
+
+}
+
+html
+{
+    background: linear-gradient(45deg, #102eff, #d2379b);
+    height: 100vh;
 }
 
 body
 {
     display: flex;
-    height: 98vh;
+    height: 99vh;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(45deg, #102eff, #d2379b);
 }
 
 .container
@@ -37,7 +42,6 @@ hr {
     width: 100%;
     background-color: black;
     border: none;
-    margin-bottom: 5vh;
 
 }
 
@@ -51,7 +55,6 @@ nav
 
     margin-top: 2vh;
     margin-bottom: 2vh;
-
 }
 
 nav a
@@ -60,22 +63,51 @@ nav a
     margin-left: 2.5vw;
 }
 
-.primaryColor
+.nav_delimiter
 {
-
+    margin-bottom: 5vh;
 }
 
-.secondaryColor
+form
 {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 10vh;
 }
 
-.tertiaryColor
+input
 {
+    color: #424242;
+    font-size: 2.5vh;
 
+    width: 20vw;
+    height: 4.5vh;
+
+    padding: 1vh;
+    margin: 1.5vh;
+
+    text-align: center;
 }
 
 .bordered
 {
     border-radius: 10px;
+}
+
+.footer_delimiter
+{
+    margin-bottom: 2vh;
+}
+
+footer
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    width: 100vw;
+    height: 5vh;
+
 }
